--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -14,7 +14,7 @@
 	height: 500px;
 			background-repeat: no-repeat !important;
 	background-size: cover !important;
-	background-position: center center !important;
+	background-position: center center;
 	z-index: 2;	
 }
 
