--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -110,7 +110,7 @@
 
 			<!-- Rooms, Garden and Banquet -->
 
-			<div class="pamphlet-container details-pamphlet rooms-gardens-banquets" ng-if="vm.detailedData.amenityDetailsTabMap.length">
+			<div class="pamphlet-container details-pamphlet rooms-gardens-banquets" ng-if="vm.detailedData.amenityDetailsTabMap">
 				<div class="pamphlet-header">
 					<div class="pamphlet-title">
 						<span class="fa fa-fw fa-folder-open"></span>
