committing changes made from Le Partycious to LePartycious

--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -5,9 +5,9 @@
 			BRINGING SMILES ON FACES
 		</div>
 	</div>
-	<!-- About LE PARTYCIOUS section starts -->
+	<!-- About LEPARTYCIOUS section starts -->
 	<section class="container text-center">
-		<h2 class="theme-color">ABOUT LE PARTYCIOUS</h2>
+		<h2 class="theme-color">ABOUT LEPARTYCIOUS</h2>
 		<p class="text-left">
 			Do you want to organize a surprise party on your anniversary but unable to do so because of your busy office hours?<br/>
 			Do you wish to plan a birthday party for your kid but got confused whether it will lie in your budget or not?<br/>
@@ -17,17 +17,17 @@
 			Planning for a party? Then you have come to the right place.
 		</p>
 		<p class="text-left">
-			Tell us the way you want your party to be like and Le Partycious will provide you with apt vendors that matches your
+			Tell us the way you want your party to be like and LePartycious will provide you with apt vendors that matches your
 
 			requirements and budget.
 			
 			
 		</p>
 		<p class="text-left bolder">
-			In short, just pick us for managing your event and Le Partycious will make it a memorable one for you.
+			In short, just pick us for managing your event and LePartycious will make it a memorable one for you.
 		</p>
 		<p class="text-left">
-			Established in October 2015, Le Partycious is an online platform for organising events.Which provides you with the relevant
+			Established in October 2015, LePartycious is an online platform for organising events.Which provides you with the relevant
 
 			information regarding different venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
 
@@ -42,7 +42,7 @@
 		<h2 class="theme-color">OUR TEAM</h2>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-				<img src="/images/blank_frame.jpg" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="LePartycious-team"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
@@ -54,13 +54,13 @@
 				<p class="team-description text-left text-justify">
 					He is a guy who is passionate about innovation and his diverse event management skills makes him a great event planner.
 					Coming from the streets of Bikaner, he holds a bachelors degree in Technology and a Diploma in Event Management.
-					He heads our Event Management team at Le Partycious and knows how to make every event a great success story. 
-					He is our Event Manager mainly concerned with managing and organising events and marketing for Le Partycious.	</p>
+					He heads our Event Management team at LePartycious and knows how to make every event a great success story. 
+					He is our Event Manager mainly concerned with managing and organising events and marketing for LePartycious.	</p>
 			</div>
 		</div>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
-				<img src="/images/blank_frame.jpg" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="LePartycious-team"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
@@ -77,7 +77,7 @@
 		</div>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-				<img src="/images/blank_frame.jpg" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="LePartycious-team"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
@@ -88,7 +88,7 @@
 				</p>
 				<p class="team-description text-left text-justify">
 					Public opinions, individual reactions &amp; feedbacks, these are the only things that matter to him.
-					He is a guy that analyzes the responses about Le Partycious and works for making the product better keeping an eye on the rapidly changing market trends.
+					He is a guy that analyzes the responses about LePartycious and works for making the product better keeping an eye on the rapidly changing market trends.
 				</p>
 			</div>
 		</div>
