--- a/app/views/badrequest/badrequest.html
+++ b/app/views/badrequest/badrequest.html
@@ -9,7 +9,7 @@
 </div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 marginTopBottom20 vcenter">
-				<img src='/images/bad_request_400.png' class='img-responsive'/>
+				<img src='/images/bad_request_400.png' class='img-responsive' alt="LePartycious-badRequest"/>
 			</div><!--
 			--><div class="col-xs-12 col-sm-6 marginTopBottom20 vcenter">
 				<div class="text-center">
