--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -2,9 +2,9 @@
 <footer class="col-xs-12" id ="footer">
    <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
       <a href='/' class="footer-logo-anchor">
-      <span class="logo"><img class="img" src="/images/lp_main_logo.png"/></span>
+      <span class="logo"><img class="img" src="/images/lp_main_logo.png" alt="LePartycious - Your Online Event Planner"/></span>
       </a>
-      <div class="h3">Welcome to Le Partycious</div>
+      <div class="h3">Welcome to LePartycious</div>
       <p class="info">We are an online platform for providing information about various vendors- venues, caterers, photographers, decorators who are capable of making your party a huge success. So if you want to host a party, just let us know how you want your party to be and we will provide you vendors that suits your requirement and budget.</p>
       <p class="connect">Connect With Us</p>
       <ul class="social">
@@ -67,7 +67,7 @@
    </div>
    <div class="gap20"></div>
    <div class="col-xs-12 lp-copyrights text-center">
-   	&copy; 2016 Le Partycious ALL RIGHTS RESERVED
+   	&copy; 2016 LePartycious ALL RIGHTS RESERVED
    </div>
 </footer>
 <div data-ng-include="'views/home/contactus.html'"></div>
