--- a/app/views/cover/cover.html
+++ b/app/views/cover/cover.html
@@ -19,7 +19,7 @@
 			<div class="main-content text-center vertical-center">
 				<div class="row">
 					<div class="col-xs-12">
-						<h1 class="main-heading">{{vm.mainCoverHeading}}</h1>
+						<h1 class="main-heading">Your Online Event Planner</h1>
 
 						<div class="semi-gap"></div>
 						<!--
