--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -2,29 +2,29 @@
 <footer class="col-xs-12" id ="footer">
    <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
       <a href='/' class="footer-logo-anchor">
-      <span class="logo"><img class="img" src="/images/lp_main_logo.png" alt="LePartycious - Your Online Event Planner"/></span>
+      <span class="logo"><img class="img" src="/images/lp_main_logo.png" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"/></span>
       </a>
       <div class="h3">Welcome to LePartycious</div>
       <p class="info">We are an online platform for providing information about various vendors- venues, caterers, photographers, decorators who are capable of making your party a huge success. So if you want to host a party, just let us know how you want your party to be and we will provide you vendors that suits your requirement and budget.</p>
       <p class="connect">Connect With Us</p>
       <ul class="social">
          <li>
-            <a target="_blank" href="https://www.facebook.com/LePartycious">
+            <a target="_blank" href="https://www.facebook.com/LePartycious" title="facebook">
             <span class="fa fa-facebook"></span>
             </a>
          </li>
          <li>
-            <a target="_blank" href="https://twitter.com/lepartycious">
+            <a target="_blank" href="https://twitter.com/lepartycious" title="twitter">
             <span class="fa fa-twitter"></span>
             </a>
          </li>
          <li>
-            <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA">
+            <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA" title="youtube">
             <span class="fa fa-youtube"></span>
             </a>
          </li>
          <li>
-            <a target="_blank" href="https://instagram.com/lepartycious">
+            <a target="_blank" href="https://instagram.com/lepartycious" title="instagram">
             <span class="fa fa-instagram"></span>
             </a>
          </li>
