--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -10,7 +10,7 @@
 					</button>-->
 		
 			<a class="navbar-brand" href="/">
-				<img src="/images/lp_logo.png" height="60px;" alt="LePartycious - Your Online Event Planner"></a>
+				<img src="/images/lp_logo.png" height="60px;" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"></a>
 				
 				
 				</div><!-- Collect the nav links, forms, and other content for toggling -->
