--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -1,4 +1,10 @@
-
+    <div class="lp-global-breadcrumb" data-ng-hide="breadCrumbLinks | isEmpty">
+    	<ul>
+    		<li data-ng-repeat="(key, value) in breadCrumbLinks">
+    			<span data-ng-hide="$index == 0">&nbsp;&nbsp;&gt;&nbsp;&nbsp;</span><a href="{{value}}">{{key}}</a> 
+    		</li>
+    	</ul>
+    </div>
 <div class='row data-list'>
 	<div class='col-xs-12 col-sm-3'>
 		<div class='col-xs-12'>
