--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -4,6 +4,13 @@
 			View Gallery
 		</button>
 	</div>
+	<div class="lp-global-breadcrumb" data-ng-hide="breadCrumbLinks | isEmpty">
+    	<ul>
+    		<li data-ng-repeat="(key, value) in breadCrumbLinks">
+    			<span data-ng-hide="$index == 0">&nbsp;&nbsp;&gt;&nbsp;&nbsp;</span><a href="{{value}}">{{key}}</a> 
+    		</li>
+    	</ul>
+    </div>
 	<div class="row">
 		<div class="details-container col-xs-12">
 			<div class="col-xs-12 col-sm-offset-1 col-sm-6">
@@ -408,22 +415,22 @@
 		<div class="pamphlet-body">
 			<ul class="details-page-social-section row">
          <li class="col-xs-6 col-sm-3">
-            <a target="_blank" href="https://www.facebook.com/LePartycious">
+            <a target="_blank" href="https://www.facebook.com/LePartycious" title="connect with facebook">
             <span class="fa fa-facebook"></span>
             </a>
          </li>
          <li class="col-xs-6 col-sm-3">
-            <a target="_blank" href="https://twitter.com/lepartycious">
+            <a target="_blank" href="https://twitter.com/lepartycious" title="connect with twitter">
             <span class="fa fa-twitter"></span>
             </a>
          </li>
          <li class="col-xs-6 col-sm-3">
-            <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA">
+            <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA" title="connect with youtube">
             <span class="fa fa-youtube"></span>
             </a>
          </li>
          <li class="col-xs-6 col-sm-3">
-            <a target="_blank" href="https://instagram.com/lepartycious">
+            <a target="_blank" href="https://instagram.com/lepartycious" title="connect with instagram">
             <span class="fa fa-instagram"></span>
             </a>
          </li>
