--- a/app/views/data/filterContent.html
+++ b/app/views/data/filterContent.html
@@ -1,180 +1,60 @@
-<div ng-if="vm.filters.localities.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseLocalitiesFilter();"><i ng-class="!vm.showLocalityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Localities</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="localitiesDiv" class="collapse in">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.localities">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="localityCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
 
-	<div ng-if="vm.filters.establishments.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEstablishmentsFilter();"><i ng-class="!vm.showEstablishmentFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Establishment Type</b></div>
-			<div id="establishmentsDiv" class="collapse in">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.establishments">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="estCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
 
-	<div ng-if="vm.filters.catererType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseCatererTypeFilter();"><i ng-class="!vm.showCatererTypeFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Caterer Type</b></div>
-			<div id="catererTypeDiv" class="collapse in">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.catererType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="estCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
+<div ng-if="vm.filters.localities.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseLocalitiesFilter" expand-filter="vm.showLocalityFilters" filter-heading="Localities" filter-id="localitiesDiv" filter-nodes="vm.filters.localities">
+	
+</div>
 
-	<div ng-if="vm.filters.eventType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEventTypeFilter();" ><i ng-class="!vm.showEventsFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Event Type</b></div>
-			<div id="eventTypeDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.eventType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="estCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
+<div ng-if="vm.filters.establishments.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseEstablishmentsFilter" expand-filter="vm.showEstablishmentFilters" filter-heading="Establishment Type" filter-id="establishmentsDiv" filter-nodes="vm.filters.establishments">
+	
+</div>	
 
-	<div ng-if="vm.filters.capacity.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseCapacityFilter()"><i ng-class="!vm.showCapacityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Max Indoor Capacity</b></div>
-			<div id="capacityDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.capacity">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="estCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
+<div ng-if="vm.filters.catererType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseCatererTypeFilter" expand-filter="vm.showCatererTypeFilters" filter-heading="Caterer Type" filter-id="catererTypeDiv" filter-nodes="vm.filters.catererType">
+	
+</div>	
+<div ng-if="vm.filters.eventType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseEventTypeFilter" expand-filter="vm.showEventsFilters" filter-heading="Event Type" filter-id="eventTypeDiv" filter-nodes="vm.filters.eventType">
+	
+</div>
 
-	<div ng-if="vm.filters.entertainmentType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEntertainmentTypeFilter();"><i ng-class="!vm.showRentalFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Entertainment Type</b></div>
-			<div id="entertainmentTypeDiv" class="collapse in">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.entertainmentType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="rentalCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
+<div ng-if="vm.filters.capacity.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseCapacityFilter" expand-filter="vm.showCapacityFilters" filter-heading="Max Indoor Capacity" filter-id="capacityDiv" filter-nodes="vm.filters.capacity">
+	
+</div>
+	
+<div ng-if="vm.filters.entertainmentType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseEntertainmentTypeFilter" expand-filter="vm.showRentalFilters" filter-heading="Entertainment Type" filter-id="entertainmentTypeDiv" filter-nodes="vm.filters.entertainmentType">
+	
+</div>
+	
+	<div ng-if="vm.filters.othersType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseOthersTypeFilter" expand-filter="vm.showOtherFilters" filter-heading="Service Type" filter-id="othersTypeDiv" filter-nodes="vm.filters.othersType">
+	
+</div>
 
-	<div ng-if="vm.filters.othersType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseOthersTypeFilter();"><i ng-class="!vm.showOtherFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Service Type</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="othersTypeDiv" class="collapse in">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.othersType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="otherCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
 
 	<hr ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0">
 	<h4 ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0" class='theme-color'><a href="" ng-click="vm.expandCollapseMoreFilter();"><i ng-class="!vm.showMoreFilters ? 'fa fa-plus' : 'fa fa-minus'"></i></a> View More Filters</h4>
 
 <div id="moreFilterDiv" class="collapse" >
-	<div ng-if="vm.filters.carType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseCarTypeFilter();"><i ng-class="!vm.showCarFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Car Type</b></div>
-			<div id="carTypeDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.carType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="carCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
-
-	<div ng-if="vm.filters.bandType.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseBandTypeFilter();"><i ng-class="!vm.showBandFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Band Type</b></div>
-			<div id="bandTypeDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.bandType">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="bandCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
-	
-	<div ng-if="vm.filters.amenities.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseAmenitiesFilter();"><i ng-class="!vm.showAmenityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Amenities</b><!-- <i class="space fa fa-building"></i> --></div>
-			<div id="amenitiesDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.amenities">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="amenityCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
-	
-	<!--
-	<div ng-if="vm.filters.rooms.length > 0">
-			<hr>
-			<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseRoomsFilter();"><i ng-class="!vm.showRoomFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Room Type</b></div>
-				<div id="roomsDiv" class="collapse">
-					<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.rooms">
-						<input ng-model='filter.checked' type='checkbox'>
-						<label for="roomCheckBoxes">
-							<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-						</label>
-					</div>
-				</div>
-		</div>-->
-	
-	
-	
-	<div ng-if="vm.filters.services.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseServicesFilter();"><i ng-class="!vm.showServiceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Services</b></div>
-		<div id="servicesDiv" class="collapse">
-			<div  ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.services">
-		    	<input class="styled" ng-model='filter.checked' type='checkbox'>
-		    	<label for="serviceCheckBoxes">
-	            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-	        	</label>
-			</div>
-		</div>
-	</div>
 
 	
+<div ng-if="vm.filters.carType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseCarTypeFilter" expand-filter="vm.showCarFilters" filter-heading="Car Type" filter-id="carTypeDiv" filter-nodes="vm.filters.carType">
+	
+</div>
 
-	<div ng-if="vm.filters.priceRange.length > 0">
-		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapsePriceRangeFilter();"><i ng-class="!vm.showPriceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Price Range</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="priceRangeDiv" class="collapse">
-				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.priceRange">
-				    <input ng-model='filter.checked' type='checkbox'>
-				    <label for="priceRangeCheckBoxes">
-		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
-		        	</label>
-				</div>
-			</div>
-	</div>
+<div ng-if="vm.filters.bandType.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseBandTypeFilter" expand-filter="vm.showBandFilters" filter-heading="Band Type" filter-id="bandTypeDiv" filter-nodes="vm.filters.bandType">
+	
+</div>	
+	
+<div ng-if="vm.filters.amenities.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseAmenitiesFilter" expand-filter="vm.showAmenityFilters" filter-heading="Amenities" filter-id="amenitiesDiv" filter-nodes="vm.filters.amenities">
+	
+</div>
+	
+<div ng-if="vm.filters.services.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapseServicesFilter" expand-filter="vm.showServiceFilters" filter-heading="Services" filter-id="servicesDiv" filter-nodes="vm.filters.services">
+	
+</div>
+
+<div ng-if="vm.filters.priceRange.length > 0" filter expand-collapse-filter-functionality="vm.expandCollapsePriceRangeFilter" expand-filter="vm.showPriceFilters" filter-heading="Price Range" filter-id="priceRangeDiv" filter-nodes="vm.filters.priceRange">
+	
+</div>
+
+
 	<hr>
 
 </div>
